--- a/src/app/adminboard/doctor/createdoctor/createdoctor.component.html
+++ b/src/app/adminboard/doctor/createdoctor/createdoctor.component.html
@@ -1,103 +1,158 @@
 <nav aria-label="breadcrumb">
-    <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a href="#">Dashboard</a></li>
-        <li class="breadcrumb-item active" aria-current="page">Doctor</li>
-    </ol>
+  <ol class="breadcrumb">
+    <li class="breadcrumb-item"><a href="#">Dashboard</a></li>
+    <li class="breadcrumb-item active" aria-current="page">Doctor</li>
+  </ol>
 </nav>
 
 <div class="container">
-    <div class="">
-        <div class="">
-            <h3 class="text-center">Add New Doctor</h3><br>
-            <div class="text-center">
-                <img src="../../../../assets/images/doctor.jpg" alt="" class="rounded-circle">
-            </div>
+  <div class="heading bg-info">
+    <h3 class="text-light text-center p-2">Add New Doctor</h3>
+  </div>
 
+  <br />
+  <!-- <div class="text-center">
+    <img
+      src="../../../../assets/images/doctor.jpg"
+      alt=""
+      class="rounded-circle"
+    />
+  </div> -->
 
-            <form [formGroup]="createDocForm" method="POST">
+  <form [formGroup]="createDocForm" method="POST">
+    <div class="row">
+      <div class="form-group col">
+        <label for="">First Name:</label>
+        <input
+          class="form-control"
+          type="text"
+          name=""
+          id=""
+          formControlName="first_name"
+        />
+      </div>
+      <div class="form-group col">
+        <label for="">Last Name:</label>
+        <input
+          class="form-control"
+          type="text"
+          name=""
+          id=""
+          formControlName="last_name"
+        />
+      </div>
+    </div>
 
-                <div class="row">
-                    <div class="form-group col">
-                        <label for="">First Name:</label>
-                        <input class="form-control" type="text" name="" id="" formControlName="first_name">
-                    </div>
-                    <div class="form-group col">
-                        <label for="">Last Name:</label>
-                        <input class="form-control" type="text" name="" id="" formControlName="last_name">
-                    </div>
-                </div>
+    <div class="row">
+      <div class="form-group col">
+        <label for="">Mobile:</label>
+        <input
+          class="form-control"
+          type="text"
+          name=""
+          id=""
+          formControlName="mobile"
+        />
+      </div>
 
-                <div class="row">
-                    <div class="form-group col">
-                        <label for="">Mobile:</label>
-                        <input class="form-control" type="text" name="" id="" formControlName="mobile">
-                    </div>
+      <div class="form-group col">
+        <label for="">Department ID:</label>
+        <select class="form-select" formControlName="dept_id">
+          <option *ngFor="let dept of deptList" [ngValue]="dept.id">
+            {{ dept.dept_name }}
+          </option>
+        </select>
 
-                    <div class="form-group col">
-                        <label for="">Department ID:</label>
-                        <select class="form-select" formControlName="dept_id">
-                            <option *ngFor="let dept of deptList" [ngValue]="dept.id">
-                                {{dept.dept_name}}
-                            </option>
-                        </select>
-
-                        <!-- For Just Static Value Getting -->
-                        <!-- <select class="form-select" formControlName="departmentcheckbox">
+        <!-- For Just Static Value Getting -->
+        <!-- <select class="form-select" formControlName="departmentcheckbox">
                             <option [ngValue]="1">One</option>
                             <option [ngValue]="2">Two</option>
                             <option [ngValue]="3">Three</option>
                         </select> -->
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="form-group col">
-                        <label for="">Degree:</label>
-                        <input class="form-control" type="text" name="" id="" formControlName="degree">
-                    </div>
-                    <div class="form-group col">
-                        <label for="">Specialization:</label>
-                        <input class="form-control" type="text" name="" id="" formControlName="specialization">
-                    </div>
-
-                </div>
-                <div class="row">
-                    <div class="form-group col">
-                        <label for="">Other Information:</label>
-                        <input class="form-control" type="text" name="" id="" formControlName="details">
-                    </div>
-                    <div class="form-group col">
-                        <label for="">Charge:</label>
-                        <input class="form-control" type="text" name="" id="" formControlName="visit_charge">
-                    </div>
-
-                </div>
-                <div class="row">
-                    <div class="form-group col">
-                        <label for="">Join Date:</label>
-                        <input class="form-control" type="date" name="" id="" formControlName="doc_join_date">
-                    </div>
-
-                    <div class="form-group col">
-                        <label for="">Put Your Picture:</label>
-                        <input class="form-control" type="file" formControlName="picture">
-                    </div>
-                </div>
-
-
-
-                <br><br>
-
-                <div class="d-flex justify-content-center"><button type="submit"
-                        class="btn btn-success float-right d-flex justify-content-center" id="btnLogin"
-                        (click)="create()">Create Doctor</button>
-                </div>
-
-
-
-
-
-
-            </form>
-        </div>
+      </div>
     </div>
+
+    <div class="row">
+      <div class="form-group col">
+        <label for="">Degree:</label>
+        <input
+          class="form-control"
+          type="text"
+          name=""
+          id=""
+          formControlName="degree"
+        />
+      </div>
+      <div class="form-group col">
+        <label for="">Specialization:</label>
+        <input
+          class="form-control"
+          type="text"
+          name=""
+          id=""
+          formControlName="specialization"
+        />
+      </div>
+    </div>
+    <div class="row">
+      <div class="form-group col">
+        <label for="">Other Information:</label>
+        <input
+          class="form-control"
+          type="text"
+          name=""
+          id=""
+          formControlName="details"
+        />
+      </div>
+      <div class="form-group col">
+        <label for="">Charge:</label>
+        <input
+          class="form-control"
+          type="text"
+          name=""
+          id=""
+          formControlName="visit_charge"
+        />
+      </div>
+    </div>
+    <div class="row">
+      <div class="form-group col">
+        <label for="">Join Date:</label>
+        <input
+          class="form-control"
+          type="date"
+          name=""
+          id=""
+          formControlName="doc_join_date"
+        />
+      </div>
+
+      <div class="form-group col">
+        <label for="">Put Your Picture:</label>
+        <input class="form-control" type="file" formControlName="picture" />
+      </div>
+    </div>
+
+    <br /><br />
+
+    <div class="d-flex justify-content-center">
+      <button
+        type="submit"
+        class="btn btn-info btn-lg float-right d-flex justify-content-center me-2"
+        id="btnLogin"
+        (click)="create()"
+      >
+        Create Doctor
+      </button>
+
+      <button
+        class="btn btn-success btn-lg float-right d-flex justify-content-center"
+        id="btnLogin"
+        routerLink="/admin/doctors"
+      >
+        Doctor List
+      </button>
+    </div>
+  </form>
+</div>
