--- a/src/app/adminboard/patient/patient.component.html
+++ b/src/app/adminboard/patient/patient.component.html
@@ -1,103 +1,165 @@
 <nav aria-label="breadcrumb">
-    <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a href="#">Dashboard</a></li>
-        <li class="breadcrumb-item active" aria-current="page">Add New Patient</li>
-    </ol>
+  <ol class="breadcrumb">
+    <li class="breadcrumb-item"><a href="#">Dashboard</a></li>
+    <li class="breadcrumb-item active" aria-current="page">Add New Patient</li>
+  </ol>
 </nav>
 
-
 <div class="container">
-    <div class="">
-        <div class="">
-            <h3 class="text-center">Add New Patient</h3><br>
-            <div class="text-center">
-                <!-- <img src="../../../../assets/images/doctor.jpg" alt="" class="rounded-circle"> -->
-            </div>
+  <div class="heading bg-info">
+    <h3 class="text-light text-center p-2">Add Patient Information</h3>
+  </div>
 
-            <form [formGroup]="patientForm" method="POST">
+  <br />
+  <div class="text-center">
+    <!-- <img src="../../../../assets/images/doctor.jpg" alt="" class="rounded-circle"> -->
+  </div>
 
-                <div class="row">
-                    <div class="form-group col">
-                        <label for="">First Name:</label>
-                        <input class="form-control" type="text" name="" id="" formControlName="p_first_name">
-                    </div>
-                    <div class="form-group col">
-                        <label for="">Last Name:</label>
-                        <input class="form-control" type="text" name="" id="" formControlName="p_last_name">
-                    </div>
-                </div>
+  <form [formGroup]="patientForm" method="POST">
+    <div class="row mb-2">
+      <div class="form-group col">
+        <label for="">First Name:</label>
+        <input
+          class="form-control"
+          type="text"
+          name=""
+          id=""
+          formControlName="p_first_name"
+        />
+      </div>
+      <div class="form-group col ">
+        <label for="">Last Name:</label>
+        <input
+          class="form-control"
+          type="text"
+          name=""
+          id=""
+          formControlName="p_last_name"
+        />
+      </div>
+    </div>
 
-                <div class="row">
-                    <div class="form-group col">
-                        <label for="">Date Of birth:</label>
-                        <input class="form-control" type="date" name="" id="" formControlName="p_age">
-                    </div>
+    <div class="row mb-2">
+      <div class="form-group col">
+        <label for="">Age:</label>
+        <input
+          class="form-control"
+          type="text"
+          name=""
+          id=""
+          formControlName="p_age"
+        />
+      </div>
 
-                    <div class="form-group col">
-                        <div class="form-group col">
-                            <label for="">Weight:</label>
-                            <input class="form-control" type="text" name="" id="" formControlName="p_weight">
-                        </div>
-                    </div>
-                </div>
+      <div class="form-group col">
+        <div class="form-group col">
+          <label for="">Weight:</label>
+          <input
+            class="form-control"
+            type="text"
+            name=""
+            id=""
+            formControlName="p_weight"
+          />
+        </div>
+      </div>
+    </div>
 
-
-
-
-
-                <!-- <label for="">Department ID:</label>
+    <!-- <label for="">Department ID:</label>
                         <select class="form-select" formControlName="dept_id">
                             <option *ngFor="let dept of deptList" [ngValue]="dept.id">
                                 {{dept.dept_name}}
                             </option>
                         </select> -->
 
-                <!-- For Just Static Value Getting -->
-                <!-- <select class="form-select" formControlName="departmentcheckbox">
+    <!-- For Just Static Value Getting -->
+    <!-- <select class="form-select" formControlName="departmentcheckbox">
                             <option [ngValue]="1">One</option>
                             <option [ngValue]="2">Two</option>
                             <option [ngValue]="3">Three</option>
                         </select> -->
 
+    <div class="row mb-2">
+      <div class="form-group col">
+        <label for="">Gender:</label>
+        <select class="form-select" formControlName="p_gender">
+          <option ngValue="Male">Male</option>
+          <option ngValue="Female">Female</option>
+        </select>
+      </div>
 
-
-                <div class="row">
-                    <div class="form-group col">
-                        <label for="">Gender:</label>
-                        <select class="form-select" formControlName="p_gender">
-                            <option ngValue="Male">Male</option>
-                            <option ngValue="Female">Female</option>
-                        </select>
-                    </div>
-
-                    <div class="form-group col">
-                        <label for="">Mobile No:</label>
-                        <input class="form-control" type="text" name="" id="" formControlName="p_mobile">
-                    </div>
-                </div>
-
-
-                <div class="row">
-                    <div class="form-group col">
-                        <label for="">Address:</label>
-                        <input class="form-control" type="text" name="" id="" formControlName="p_address">
-                    </div>
-                    <div class="form-group col">
-                        <label for="">Put Your Picture:</label>
-                        <input class="form-control" type="file" name="" id="" formControlName="p_imageurl">
-                    </div>
-
-                </div>
-
-
-
-
-                <br><br>
-
-                <div class="d-flex justify-content-center"><button type="submit"
-                        class="btn btn-success float-right d-flex justify-content-center" id="btnLogin"
-                        (click)="createPatient()">Create Patient</button>
-                </div>
-            </form>
-        </div>
+      <div class="form-group col">
+        <label for="">Mobile No:</label>
+        <input
+          class="form-control"
+          type="text"
+          name=""
+          id=""
+          formControlName="p_mobile"
+        />
+      </div>
     </div>
+
+    <div class="row mb-2">
+      <div class="form-group col">
+        <label for="">Address:</label>
+        <input
+          class="form-control"
+          type="text"
+          name=""
+          id=""
+          formControlName="p_address"
+        />
+      </div>
+      <div class="form-group col">
+        <label for="">Platform:</label>
+        <select class="form-select" formControlName="p_platform">
+          <option [ngValue]="1" >Offline</option>
+          <option [ngValue]="2">Online</option>
+        </select>
+      </div>
+    </div>
+
+    <!-- <div class="row">
+        <div class="form-group col">
+            <label for="">Put Your Picture:</label>
+            <input
+              class="form-control"
+              type="file"
+              name=""
+              id=""
+              formControlName="p_imageurl"
+            />
+          </div>
+     
+    </div> -->
+
+    <br /><br />
+
+    <div class="d-flex justify-content-center">
+      <button
+        type="submit"
+        class="btn btn-info float-right d-flex justify-content-center me-2" 
+        id="btnLogin"
+        (click)="create()"
+      >
+        Create Patient
+      </button>
+
+      <button
+        type="submit"
+        routerLink="/admin/patientlist"
+        class="btn btn-warning float-right d-flex justify-content-center"
+        id="btnLogin"
+        
+      >
+        Back to Patientlist
+      </button>
+    </div>
+  </form>
+</div>
+
+
+
+
+
