--- a/src/app/adminboard/patient/patient.component.html
+++ b/src/app/adminboard/patient/patient.component.html
@@ -49,6 +49,9 @@
           id=""
           formControlName="p_age"
         />
+        <div *ngIf="patientForm.hasError('pattern')">
+          Please enter a valid number.
+        </div>
       </div>
 
       <div class="form-group col">
