--- a/src/app/adminboard/patient/patientlist/patientlist.component.html
+++ b/src/app/adminboard/patient/patientlist/patientlist.component.html
@@ -1,29 +1,276 @@
 <nav aria-label="breadcrumb">
-    <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a href="#">Dashboard</a></li>
-        <li class="breadcrumb-item active" aria-current="page">Patient List:</li>
+    <ol class="breadcrumb display">
+      <li class="breadcrumb-item"><a href="#" style="text-decoration: none;">Dashboard</a></li>
+      <li class="breadcrumb-item active text-dark" aria-current="page">All Patient List</li>
     </ol>
-</nav>
+  </nav>
+  
+  
+  
+  <div class="row">
+  <div class="col">
+  
+    <div class="row">
+      <mat-form-field class="col">
+        <mat-label>Search Your Data Here</mat-label>
+        <input matInput (keyup)="applyFilter($event)">
+      </mat-form-field>
+    
+      <div class="col">
+        <div class="container d-flex justify-content-end mb-3">
+          <button class="btn btn-outline-info me-2" routerLink="/admin/create_patient">New Doctor</button>
+          <button class="btn btn-outline-info" routerLink="/admin/create_patient">Departments</button>
+        </div>
+      </div>
+  
+  
+    </div>
+  
+    <!-- A General Input Field Workd Also -->
+    <!-- <input type="text"  (keyup)="applyFilter($event)"> -->
+  
+    <div class="mat-elevation-z8 table_wrapper">
+      <table mat-table [dataSource]="datasource" matSort>
+        <ng-container matColumnDef="id">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
+          <td mat-cell class="text-center" *matCellDef="let row"> {{row.id}} </td>
+        </ng-container>
+  
+        <ng-container matColumnDef="p_first_name">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> First Name </th>
+          <td mat-cell class="text-center" *matCellDef="let row"> {{row.p_first_name}}</td>
+        </ng-container>
+  
+        <ng-container matColumnDef="p_last_name">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Last Name </th>
+          <td mat-cell  class="text-center"  *matCellDef="let row"> {{row.p_last_name}} </td>
+        </ng-container>
+  
+        <ng-container matColumnDef="p_age">
+          <th mat-header-cell *matHeaderCellDef> Age </th>
+          <td mat-cell  class="text-center" *matCellDef="let row"> {{row.p_age}} </td>
+        </ng-container>
+  
+        <ng-container matColumnDef="p_weight">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Weight</th>
+          <td mat-cell  class="text-center" *matCellDef="let row"> {{row.p_weight}} </td>
+        </ng-container>
+  
+        <ng-container matColumnDef="p_gender">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Gender</th>
+          <td mat-cell class="text-center"  *matCellDef="let row"> {{row.p_gender}} </td>
+        </ng-container>
+        <ng-container matColumnDef="p_mobile">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>mobile
+          <td mat-cell  class="text-center" *matCellDef="let row"> {{row.p_mobile}} </td>
+        </ng-container>
 
-<div class="container d-flex justify-content-end mb-3">
-    <div class="btn btn-primary">Add New Patient</div>
-</div>
+        <ng-container matColumnDef="p_address">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Address
+          <td mat-cell  class="text-center" *matCellDef="let row"> {{row.p_address}} </td>
+        </ng-container>
 
+        <ng-container matColumnDef="p_platform">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Platform</th>
+          <td mat-cell class="text-center"  *matCellDef="let row"> {{row.p_platform}} </td>
+        </ng-container>
 
-
-<mat-tab-group>
-    <mat-tab label="First">
-        <app-patientpending></app-patientpending>
-        Content 1
-    </mat-tab>
-
-    <mat-tab label="Second">
-        <app-patientreview></app-patientreview>
-        Content 2
-    </mat-tab>
-
-    <mat-tab label="Third">
-        Content 3
-    </mat-tab>
-
-</mat-tab-group>
+  
+  
+        <ng-container matColumnDef="action">
+          <th mat-header-cell *matHeaderCellDef> Actions </th>
+          <td mat-cell  class="text-center"  *matCellDef="let row">
+            <div class="d-flex justify-content-center align-items-center">
+              <button class="btn btn-info btn-sm me-1" (click)="edit(row, content)"
+              >Edit</button><br>
+            <button class="btn btn-danger btn-sm" (click)="deleteAlert(row.id)">Delete</button>
+            </div>
+          </td>
+        </ng-container>
+  
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  
+        <!-- Row shown when there is no matching data. -->
+        <!-- <tr class="mat-row" *matNoDataRow>
+  <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+  </tr> -->
+      </table>
+    </div>
+    <mat-paginator [pageSizeOptions]="[10, 20,30, 100]" showFirstLastButtons
+      aria-label="Select page of users"></mat-paginator>
+    </div>
+  </div>
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  <!-- ==============================Modal====================================================== -->
+  
+  <ng-template #content let-c="close" let-d="dismiss">
+    <div class="modal-header">
+      <h4 class="modal-title text-center" id="modal-basic-title">Edit Patient's Information:</h4>
+      <button type="button" class="btn-close" aria-label="Close" (click)="d('Cross click')"></button>
+    </div>
+    <div class="modal-body">
+  
+      <h3 class="text-center bg-info mb-4 p-2">Update Patient's Information</h3>
+      <form [formGroup]="editPForm" method="POST">
+        <div class="row mb-2">
+          <div class="form-group col">
+            <label for="">First Name:</label>
+            <input
+              class="form-control"
+              type="text"
+              name=""
+              id=""
+              formControlName="p_first_name"
+            />
+          </div>
+          <div class="form-group col ">
+            <label for="">Last Name:</label>
+            <input
+              class="form-control"
+              type="text"
+              name=""
+              id=""
+              formControlName="p_last_name"
+            />
+          </div>
+        </div>
+    
+        <div class="row mb-2">
+          <div class="form-group col">
+            <label for="">Age:</label>
+            <input
+              class="form-control"
+              type="text"
+              name=""
+              id=""
+              formControlName="p_age"
+            />
+          </div>
+    
+          <div class="form-group col">
+            <div class="form-group col">
+              <label for="">Weight:</label>
+              <input
+                class="form-control"
+                type="text"
+                name=""
+                id=""
+                formControlName="p_weight"
+              />
+            </div>
+          </div>
+        </div>
+    
+        <!-- <label for="">Department ID:</label>
+                            <select class="form-select" formControlName="dept_id">
+                                <option *ngFor="let dept of deptList" [ngValue]="dept.id">
+                                    {{dept.dept_name}}
+                                </option>
+                            </select> -->
+    
+        <!-- For Just Static Value Getting -->
+        <!-- <select class="form-select" formControlName="departmentcheckbox">
+                                <option [ngValue]="1">One</option>
+                                <option [ngValue]="2">Two</option>
+                                <option [ngValue]="3">Three</option>
+                            </select> -->
+    
+        <div class="row mb-2">
+          <div class="form-group col">
+            <label for="">Gender:</label>
+            <select class="form-select" formControlName="p_gender">
+              <option ngValue="Male">Male</option>
+              <option ngValue="Female">Female</option>
+            </select>
+          </div>
+    
+          <div class="form-group col">
+            <label for="">Mobile No:</label>
+            <input
+              class="form-control"
+              type="text"
+              name=""
+              id=""
+              formControlName="p_mobile"
+            />
+          </div>
+        </div>
+    
+        <div class="row mb-2">
+          <div class="form-group col">
+            <label for="">Address:</label>
+            <input
+              class="form-control"
+              type="text"
+              name=""
+              id=""
+              formControlName="p_address"
+            />
+          </div>
+          <div class="form-group col">
+            <label for="">Platform:</label>
+            <select class="form-select" formControlName="p_platform">
+              <option [ngValue]="1" >Offline</option>
+              <option [ngValue]="2">Online</option>
+            </select>
+          </div>
+        </div>
+    
+        <!-- <div class="row">
+            <div class="form-group col">
+                <label for="">Put Your Picture:</label>
+                <input
+                  class="form-control"
+                  type="file"
+                  name=""
+                  id=""
+                  formControlName="p_imageurl"
+                />
+              </div>
+         
+        </div> -->
+    
+        <br /><br />
+    
+        <div class="d-flex justify-content-center">
+          <button
+            type="submit"
+            class="btn btn-info float-right d-flex justify-content-center me-2" 
+            id="btnLogin"
+            (click)="updateData()"
+          >
+            Update
+          </button>
+    
+          <button
+            type="submit"
+            routerLink="/admin/patientlist"
+            class="btn btn-warning float-right d-flex justify-content-center"
+            id="btnLogin"
+            (click)="cancelModal()"
+            
+          >
+            Cancel
+          </button>
+        </div>
+      </form>
+  
+    </div>
+    <!-- <div class="modal-footer">
+      <button type="button" class="btn btn-outline-dark" (click)="c('Save click')">Save</button>
+    </div> -->
+  </ng-template>
+  
