--- a/src/app/adminboard/patient/patient.component.html
+++ b/src/app/adminboard/patient/patient.component.html
@@ -44,7 +44,7 @@
         <label for="">Age:</label>
         <input
           class="form-control"
-          type="text"
+          type="number"
           name=""
           id=""
           formControlName="p_age"
@@ -59,7 +59,7 @@
           <label for="">Weight:</label>
           <input
             class="form-control"
-            type="text"
+            type="number"
             name=""
             id=""
             formControlName="p_weight"
